syntax = "proto3";
package model;

import "TransactionInfo.proto";

// 成交明细
message PushTransactionInfo {
    uint32 marketType = 1; // 市场类型
    string stockId = 2; // 股票代码
    repeated TransactionInfo transactions = 3; // 成交明细列表
}