syntax = "proto3";
package model;

import "StockTypeProperty.proto";
import "StockBaseInfo.proto";

// 股票基本信息
message StockBaseInfoBrief {
    StockBaseInfo stockBaseInfo =1;//股票基本信息
    StockTypeProperty stockTypeProperty = 2; // 股票类型属性
}