syntax = "proto3";
package model;

import "CommonRs.proto";
import "StockBaseInfoBrief.proto";


// 股票基本信息请求返回
message StockBriefRs {
    CommonRs commonRs = 1; // 基础请求
    repeated StockBaseInfoBrief stockBaseInfoBrief = 2; // 股票基本信息简略列表
}