syntax = "proto3";
package model;

import "CommonReq.proto";
import "StockKey.proto";


// 股票指标请求
message StockQuotaReq {
    CommonReq commonReq = 1; // 基础请求
    StockKey stockKeys = 2; //stockKey
    int32 serialNo = 3; // 序号
    int32 offSet = 4;// 偏移量
    uint32 candleType = 5; // 除权类型
    uint32 kLineType = 6; // K 线类型
    uint32 quotaType = 7; // 指标类型
    string quotaParam = 8; // 指标参数
}