syntax = "proto3";
package model;

// 股票快照
message StockSnapshot {
    uint32 marketType = 1; // 市场代码
    string stockId = 2; // 股票代码
    uint32 tradeTime = 3; // 交易时间
    uint32 totalMins = 4; // 总分钟数
    uint32 currDisplayPrice = 5; // 当前展示价格
    uint32 currCollectPrice = 6; // 当前集合价格
    uint32 yesterdayClosePrice = 7; // 昨收
    uint32 lowestPrice = 8; // 最低价
    uint32 lastPrice = 9; // 最新价
    uint32 openPrice = 10; // 开盘价
    uint32 closePrice = 11; // 收盘价
    uint32 highestPrice = 12; // 最高价
    uint64 tradeVal = 13; // 成交额
    uint64 tradeAmount = 14; // 成交量
    int32 tradeStatus = 15; // 交易状态
    uint64 totalValue = 16; // 总市值
    int32 lineNo = 17; // 线号
    uint32 exchangeRatio = 18; // 换手率
    uint32 tradeNum = 19; // 成交笔数
    int32 yesterdayCloseIOPV = 20; // 昨收基金净值
    int32 iopv = 21; // 基金净值
    int32 dynPERate = 22; // 动态市盈率
    int32 peRate = 23; // 静态市盈率
    int32 peTTM = 24; // 滚动市盈率
    int32 pbRate = 25; // 市净率
    uint32 riseCount = 26; // 涨家数
    uint32 fallCount = 27; // 跌家数
    uint32 unchangeCount = 28; // 平家数
    uint32 avgPrice = 29; // 均价
    uint32 inPlate = 30; // 内盘
    uint32 outPlate = 31; // 外盘
    int32 entrustRate = 32; // 委比
    uint32 amountRate = 33; // 量比
    uint32 afterTradeDate = 34; // 盘后交易日期
    uint32 afterTradeTime = 35; // 盘后交易时间
    uint32 afterTradeAmount = 36; // 盘后成交量
    uint32 afterTradeVal = 37; // 盘后成交额
    uint32 yesterdaySettlePrice = 38; // 昨日结算价
    uint32 yesterdayPosition = 39; // 昨日持仓量
    uint32 settlePrice = 40; // 结算价
    uint32 position = 41; // 持仓量
    uint64 totalEntrustBuyAmount = 42; // 总委买比
    uint64 totalEntrustSaleAmount = 43; // 总委卖比
    uint32 weightAvgBuyPrice = 44; // 加权平均买价
    uint32 weightAvgSalePrice = 45; // 加权平均卖价
}