syntax = "proto3";
package model;

import "StockKey.proto";
import "TransactionInfo.proto";


// 成交明细
message TransactionPushInfo {
    StockKey stockKey = 1; // 股票信息
    repeated TransactionInfo transactionInfo = 2; // 成交明细
}

